--- a/SpotifyParser/SpotifyParser/SpotifyParser/nbproject/private/private.properties
+++ b/SpotifyParser/SpotifyParser/SpotifyParser/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\cstuser\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Samuel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
